--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+    <div class="chart1"></div>
+
  <!--        https://www.youtube.com/watch?v=OZXYk_bgQGQ -->
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="./script.js"></script>
