--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <div class="chart1"></div>
+    <div class="line-chart-1"></div>
+    <svg class="line-chart"></svg>
 
  <!--        https://www.youtube.com/watch?v=OZXYk_bgQGQ -->
     <script src="https://d3js.org/d3.v5.js"></script>
