Added minimum grid to 2.).

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <svg class="line-chart"></svg>
         <div>
             <div class="row">
-                <input id="maximum" type="text" />
-                <button value="Refresh Page" onClick="window.location.reload()">
-                    Generate Chart with random data
-                </button>
-                <svg class="line-chart-1"></svg>
+                <div class="col-s">
+                    <input id="maximum" type="text" />
+                    <button value="Refresh Page" onClick="window.location.reload()">
+                        Generate Chart with random data
+                    </button>
+                    <svg class="line-chart-1"></svg>
+                </div>
             </div>
         </div>
     </div>
