Fixed margin of 2.).

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <svg class="line-chart"></svg>
-        <div>
+
             <div class="row">
-                <div class="col-s">
+                <div class="col-12">
                     <input id="maximum" type="text" />
                     <button value="Refresh Page" onClick="window.location.reload()">
                         Generate Chart with random data
@@ -22,7 +22,7 @@
                     <svg class="line-chart-1"></svg>
                 </div>
             </div>
-        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
