--- a/index.html
+++ b/index.html
@@ -11,25 +11,50 @@
 
 <body>
     <div class="container">
+        
         <div class="row mt-2 mb-2">
             <div class="col-4">
-                <input type="date" id="from" />
-                <input type="date" id="to" />
-                <button class="btn btn-primary" onclick="window.location.reload()">
-                    Apply date
-                </button>
+                <div class="card">
+                    <div class="card-header">Date</div>
+                    <div class="card-body">
+                        <div class="form-row mb-2">
+                            <div class="col">
+                                <label for="from">From</label>
+                                <input type="date" id="from" class="form-control" />
+                            </div>
+                            <div class="col">
+                                <label for="to">To</label>
+                                <input type="date" id="to" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col">
+                            <button class="btn btn-primary" onclick="window.location.reload()">
+                                Apply date
+                            </button>
+                        </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-8">
                 <svg class="line-chart"></svg>
             </div>
         </div>
+
         <div class="row mb-2">
             <div class="col-4">
-                <input class="w-5 mb-2" type="text" id="maximum" class="form-control" title="Only numbers allowed"
-                    placeholder="Please type in random number" />
-                  <button class="btn btn-primary" value="Refresh Page" onClick="window.location.reload()">
-                    Generate BPI with random data
-                </button>
+                <div class="card">
+                    <div class="card-header">Random</div>
+                    <div class="card-body">
+                        <label for="maximum">Set Max</label>
+                        <input class="form-control mb-2" type="text" id="maximum" class="form-control"
+                            title="Only numbers allowed" placeholder="Please type in random number" />
+                        <button class="btn btn-primary" value="Refresh Page" onClick="window.location.reload()">
+                            Apply values
+                        </button>
+                    </div>
+                </div>
             </div>
             <div class="col-8">
                 <svg class="line-chart-1"></svg>
