Added simple linear regression based on fetched data.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 </div>
             </div>
             <div class="col-8">
+                <div class="mb-2">
                 <svg class="line-chart"></svg>
+                </div>
+                <svg class="line-chart-2"></svg>
             </div>
         </div>
 
