--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    </link>
+</link>
 </head>
 
 <body>
@@ -66,6 +66,7 @@
 
     </div>
 
+    <script src="https://unpkg.com/brain.js@1.6.0/browser.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -77,6 +78,7 @@
         crossorigin="anonymous"></script>
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="./script.js"></script>
+    <script src="./prediction.js"></script>
 </body>
 
 </html>
