Implemented prediction based on Jan values for 28 steps.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
                 </div>
             </div>
             <div class="col-8">
-                <div class="mb-2">
-                <svg class="line-chart"></svg>
-                </div>
+                <svg class="line-chart mb-2"></svg>
+                <svg class="line-chart-3 mb-2"></svg>
                 <svg class="line-chart-2"></svg>
             </div>
         </div>
@@ -63,7 +62,6 @@
                 <svg class="line-chart-1"></svg>
             </div>
         </div>
-
     </div>
 
     <script src="https://unpkg.com/brain.js@1.6.0/browser.js"></script>
